fixed searchbar bug, wrapped icon in button

--- a/src/styles/SearchForm.scss
+++ b/src/styles/SearchForm.scss
@@ -6,6 +6,14 @@
   display: flex;
   align-items: center;
 
+  .search-btn {
+    background-color: transparent;
+    border: none;
+    margin-left: 0.5rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+  }
+
   .search-icon {
     color: #000;
   }
